@@ -1,30 +1,0 @@
-#encoding=utf-8
-
-# __init__.py
-# This file is part of PSR Registration Shuffler
-#
-# Copyright (C) 2008 - Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
-#
-# This is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# It is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this file. If not, write to the Free Software
-# Foundation, Inc., 51 Franklin St, Fifth Floor,
-# Boston, MA  02110-1301  USA
-
-'''
-PURPOSE
-=======
-
-This module allows manipulation of internal regfiles. They hold one
-registration per file which can be combined to a regbank using the regbank
-module
-'''
