@@ -1,102 +1,0 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH PSRREGSHUFFLE "1" "July 2008" "psrregshuffle Registration Shuffler 0.1" "User Commands"
-.SH NAME
-psrregshuffle (PSR Registration Shuffler) - A program for organizing PSR
-registration bank files
-.SH SYNOPSIS
-.B psrregshuffle
-[\fIoptions\fR]
-.SH OPTIONS
-.TP
-\fB\-\-version\fR
-show program's version number and exit
-.TP
-\fB\-h\fR, \fB\-\-help\fR
-show this help message and exit
-.SH PURPOSE
-If you're using your PSR keyboard for live gigs you're most probably employing
-its registration banks for storing each song's panel settings. After some time
-you might grow quite a large set of registration banks this way. While creating
-those is quite straight-forward organization is quite time consuming. Especially
-if you have your banks organized according to your set list.
-
-In most cases a song's settings don't change (much) between gigs. But the set
-list might change. And than you're spending quite some time with assembling new
-registration banks out of your existing banks. What makes the process so time
-consuming is the fact that you always have to store your new bank to disc in
-order to load another one which holds the settings for the next song. Than
-you need to load the new bank again for storing the song in it. And so on.
-
-The PSR Registration Shuffler is meant to set an abrupt end to this. You will
-still need to create your registrations on the keyboard. And you need to apply
-changes to them on the keyboard, too. But when you're preparing for an
-upcoming gig and need to assemble new bank files out of pre-existing
-registrations only you can do so within the comfort of your computer at a
-speed unmatched by the keyboard.
-.SH "HOW IT WORKS"
-PSR Registration Shuffler maintains a data directory where you need to import
-your bank files to. During that process the bank file gets split up into single
-registrations so that the data directory contains many singular files with
-each holding a registration. In that regard the data directory resembles a
-library with all available registrations.
-
-Afterwards you can assemble new bank files of all registrations. This means
-the application will create ready to use bank files which you can transfer
-to your keyboard. Note that the act of transfer is out of scope for PSR
-Registration Shuffler. Depending on your keyboard model you can use a floppy
-disc, an USB storage device or some other kind of connection.
-
-As an added bonus you can set the name of each registration on the computer,
-too. So you don't have to do so on the keyboard which also can take quite a
-lot of time if the instrument doesn't allow to hook up an external keyboard.
-But please keep in mind that this is the only supported manipulation of
-registrations. Since the file format is poorly documented and widely
-unknown to the public there are no other changes allowed. You should do them
-on the instrument, anyway since on the computer you can't listen to your
-changes.
-.SH "ABOUT THE USER-INTERFACE"
-The user-interface consists of four tabs:
-
-.br
-\h'3' \(bu Data directory
-.br
-\h'3' \(bu Create bank files
-.br
-\h'3' \(bu Import registrations
-.br
-\h'3' \(bu About
-
-The first tab is meant for selecting the data directory where the singular
-registration files created by the application reside. Be sure the double-click
-on a directory so you branch into it and can see its sub-directories if it
-contains any. Simply highlighting it doesn't work.
-
-The second tab is where you can see all available registrations and build
-new banks. Therefor two lists are shown side by side. In order to create a
-new bank just drag and drop the registrations from the left list to the right
-one and push "Save bank file". You'll be asked for a filename for the new
-bank file then.
-
-In order to populate your data directory you need to import registrations
-from existing bank files. This is what the third tab is for. Please make sure
-to highlight (select) all registrations which you want to import. Not-selected
-registrations won't be imported.
-
-The fourth tab finally shows credits and copyright information.
-.SH "KNOWN BUGS"
-As I don't own any other PSR keyboard except the PSR-2000 and since the file
-formats used by those keyboards are not well documented if at all the PSR-2000
-is the only supported keyboard. If you own any other keyboard and are willing
-to provide help of whatever type please get in touch with me.
-.SH AUTHOR
-Written by Dennis Schulmeister <dennis \fB\-at\-\fR ncc\-1701a.homelinux.net>
-.SH COPYRIGHT
-Copyright \(co 2008 Dennis Schulmeister
-.br
-This is free software; you can redistribute it and/or modify it under the terms
-of the GNU General Public License as published by the Free Software Foundation;
-either version 3 of the License, or (at your option) any later version.
-.PP
-The software is distributed in the hope that it will be useful, but WITHOUT ANY
-WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-PARTICULAR PURPOSE.  See the GNU General Public License for more details.
