@@ -30,20 +30,25 @@ This script starts the local development version of the application.
 
 # Import global modules
 import __builtin__
+import gtk.glade
 import gettext
 import sys
 import os
+
 
 # Fake script name to be psrregshuffe. Otherwise man pages generated from
 # the --help and --version output would cite the staartup command as being
 # start-dev-version.
 sys.argv[0] = "psrregshuffle"
 
+
 # Initialize l8n support
 domain_name = "psr-reg-shuffle"
 locale_dir  = os.path.join(sys.path[0], "locale")
 
 gettext.install(domain_name, locale_dir, unicode=1)
+gtk.glade.bindtextdomain(domain_name, locale_dir)
+gtk.glade.textdomain(domain_name)
 
 
 # Set path of data directory
